# cb2

./: .gitignore  .gitmodules  .pre-commit-config.yaml  ClientDemoNotebook.ipynb  FollowerClientDemoNotebook.ipynb  LICENSE.md  README.md  build_and_deploy.sh  build_client.sh  db_location.py  guidelines.txt  install-linux.sh  pylintrc  pyproject.toml  requirements.txt  resources.txt
agents/: agent.py  agent_util.py  config.py  gpt_follower.py  gpt_follower_example.yaml  local_agent_pair.py  remote_agent.py  simple_follower.py  simple_follower.yaml  simple_leader.py  test_local_agent_pair.py
bad_link_simulation/: README.md  end_slow_internet.sh  start_slow_internet.sh
deploy/: deploy.sh
deploy/systemd/: README.md  cerealbar.service  deploy.sh  launch.sh
docs/: Readme.md
envs/: cb2.py  demo_self_play.py
eval/: eval_schema.py  run_eval.py  visualize_eval.py
follower_bots/: README.md  constants.py  utils.py
follower_bots/data_configs/: pretraining_examples.json
gym_env/: cb2-gym.py
gym_envs/: cb2_env.py  local_game_coordinator.py
py_client/: README.md  cb2_client.py  client_messages.py  client_utils.py  endpoint_pair.py  follower_client.py  follower_data_masking.py  game_endpoint.py  game_socket.py  jokes_client.py  leader_client.py  local_game_coordinator.py  remote_client.py  test_client.py
server/: actor.py  assets.py  card.py  client_exception_logger.py  experience.py  follower_pilot_lobby.py  game_recorder.py  google_authenticator.py  google_experience.py  google_lobby.py  hex.py  leaderboard.py  lobbies.py  lobby.py  lobby_consts.py  lobby_utils.py  main.py  map_provider.py  map_update.json  map_utils.py  mturk_experience.py  mturk_lobby.py  open_lobby.py  remote_table.py  replay_lobby.py  replay_state.py  requirements.txt  room.py  room_manager.py  routing_utils.py  scenario_lobby.py  scenario_state.py  scenario_util.py  state.py  state_machine_driver.py  state_test.py  state_utils.py  test_client.py  test_lobby.py  test_state.py  (+8 more)
service/: cerealbar.service  launch.sh
systemd/: cerealbar.service
(+869 files in other folders)
